<resources>
    <string name="app_name">GaboApp</string>
    <string name="hello_app_books">Hello GaboApp user!</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="not_user">Don\'t have an account?</string>
    <string name="already_user">Already a user?</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="published_by">Published by</string>
    <string name="pages">Pages</string>
    <string name="save">Save</string>
    <string name="no_books_in_your_lists_explore_to_add_one">No books in your lists. Search to add one</string>
    <string name="your_saved_books">Your saved books</string>
    <string name="description">Description</string>
    <string name="first_sentence">First sentence</string>
    <string name="published_in">Published in</string>
    <string name="published_date">Published date</string>
</resources>